# mutmut-mcp

./: Dockerfile  Makefile  README.md  mutmut_mcp.py  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml
tests/: test_integration.py  test_mutmut_api.py
